# crewai-prediction-markets

./: .gitignore  README.md  pyproject.toml
crewai_prediction_markets/: __init__.py  tools.py
tests/: test_tools.py
